--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 
-  
+@media screen and(mxn-width:600px){
+  .container{
+    width:400;
+  }
+}
 
 .container{
-  width:500px;
+  width:fit-content;
   height:fit-content;
   margin-top: 30px;
   /* height: */
